# rustcash

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  justfile  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  labeler.yml  security.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/api/src/routes/: health.rs  mod.rs
crates/business/: Cargo.toml
crates/business/src/: customer.rs  error.rs  invoice.rs  lib.rs  vendor.rs
crates/cli/: Cargo.toml
crates/cli/src/: context.rs  main.rs
crates/cli/src/commands/: account.rs  database.rs  mod.rs
crates/cli/tests/: account_commands.rs  database_commands.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  book.rs  budget.rs  commodity.rs  error.rs  ids.rs  lib.rs  transaction.rs
crates/engine/: Cargo.toml
crates/engine/src/: account.rs  balance.rs  error.rs  lib.rs  transaction.rs
crates/engine/tests/: accounts.rs  balance.rs  helpers.rs  transactions.rs
crates/export/: Cargo.toml
crates/export/src/: csv.rs  error.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/import/: Cargo.toml
crates/import/src/: csv.rs  error.rs  lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: error.rs  host.rs  lib.rs  manifest.rs
crates/reports/: Cargo.toml
crates/reports/src/: error.rs  lib.rs
crates/reports/src/standard/: mod.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial.sql  002_users_auth.sql  003_book_privacy.sql
crates/storage/src/: convert.rs  db.rs  error.rs  lib.rs
crates/storage/src/repositories/: accounts.rs  books.rs  commodities.rs  mod.rs  prices.rs  transactions.rs
crates/storage/tests/: accounts.rs  books.rs  commodities.rs  prices.rs  transactions.rs
crates/sync/: Cargo.toml
crates/sync/src/: error.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/adr/: 001-rust-decimal-for-money.md  002-sqlite-first.md  003-api-first.md  004-wasm-plugins.md  005-business-opt-in.md  006-testing-strategy.md  007-security-model.md  008-privacy-model.md  009-concurrency-model.md  010-observability.md  011-locale-display.md  012-backup-integrity.md
