[package]
name        = "rustcash-api"
description = "axum HTTP/JSON API — the canonical interface for all clients"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rustcash-server"
path = "src/main.rs"

[lib]
name = "rustcash_api"
path = "src/lib.rs"

[dependencies]
rustcash-core    = { workspace = true }
rustcash-engine  = { workspace = true }
rustcash-reports = { workspace = true }
rustcash-import  = { workspace = true }
rustcash-export  = { workspace = true }
rustcash-plugin  = { workspace = true }
axum             = { workspace = true }
tower            = { workspace = true }
tower-http       = { workspace = true }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
rust_decimal     = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
config           = { workspace = true }
dirs             = { workspace = true }
