[package]
name        = "rustcash-business"
description = "Opt-in business features: invoicing, AR/AP, customers, vendors, payroll"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core    = { workspace = true }
rustcash-storage = { workspace = true }
rustcash-engine  = { workspace = true }
rust_decimal     = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
