[package]
name        = "rustcash-core"
description = "Pure domain model — accounts, transactions, splits, commodities, prices"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rust_decimal = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
