[package]
name        = "rustcash-import"
description = "File format importers: CSV, OFX/QFX, QIF, GnuCash XML"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core    = { workspace = true }
rustcash-storage = { workspace = true }
rust_decimal     = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
