[package]
name        = "rustcash-plugin"
description = "WASM plugin host — sandboxed reports, importers, and exporters via wasmtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core = { workspace = true }
wasmtime      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
dirs          = { workspace = true }
