[package]
name        = "rustcash-reports"
description = "Report trait and standard report library (income statement, balance sheet, etc.)"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core   = { workspace = true }
rustcash-engine = { workspace = true }
rust_decimal    = { workspace = true }
chrono          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
