[package]
name        = "rustcash-storage"
description = "SQLite and PostgreSQL persistence layer"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core = { workspace = true }
sqlx          = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
rust_decimal  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
