[package]
name        = "rustcash-sync"
description = "Opt-in CRDT-based multi-device sync"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rustcash-core    = { workspace = true }
rustcash-storage = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
