[package]
name        = "rustcash-tui"
description = "Terminal user interface — vim-keybindings, account tree, transaction register"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rustcash-tui"
path = "src/main.rs"

[dependencies]
rustcash-core    = { workspace = true }
rustcash-engine  = { workspace = true }
rustcash-reports = { workspace = true }
rustcash-import  = { workspace = true }
ratatui          = { workspace = true }
crossterm        = { workspace = true }
tokio            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
chrono           = { workspace = true }
rust_decimal     = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
config           = { workspace = true }
dirs             = { workspace = true }
